# smoke-tests

./: README.md  Update build-node-smoke-tests.yml  package.json  renovate.json
.github/workflows/: build-node-examples.yml  build-node-smoke-tests.yml
node/: README.md
node/react/create-react-app/: README.md  package.json
node/react/create-react-app/src-tauri/: Cargo.toml  tauri.conf.json
node/react/gatsby-themed-site/: README.md  package.json
node/react/gatsby-themed-site/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
node/react/next.js/: README.md  package.json
node/react/next.js/src-tauri/: Cargo.toml  tauri.conf.json
node/svelte/svelte-app/: README.md  babel.config.js  package.json  rollup.config.js
node/svelte/svelte-app/src/: App.svelte
node/svelte/svelte-app/src-tauri/: Cargo.toml  tauri.conf.json
node/vanillajs/monolith/: README.md  package.json
node/vanillajs/monolith/src-tauri/: Cargo.toml  tauri.conf.json
node/vue/nuxt-app/: README.md  package.json
node/vue/nuxt-app/src-tauri/: Cargo.toml  tauri.conf.json
node/vue/quasar-app/: README.md  package.json  quasar.conf.js
node/vue/quasar-app/scripts/: compile-node.js
node/vue/quasar-app/src/: index.template.html
node/vue/quasar-app/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
node/vue/quasar-app/src-tauri/src/: main.rs
node/vue/quasar-app/src/pages/: Index.vue
node/vue/vue-cli-app/: README.md  package.json
node/vue/vue-cli-app/src-tauri/: Cargo.toml  tauri.conf.json
reason/reason-tauri/: webpack.config.js
reasonML/reason-react/: .gitignore  bsconfig.json  package-lock.json  package.json
rust/: README.md
rust/yew/: Makefile.toml  package.json
rust/yew/src-tauri/: Cargo.toml
rust/yew/todomvc/: .gitignore  Makefile.toml  README.md  package.json
rust/yew/todomvc/src-tauri/: Cargo.toml  tauri.conf.json
rust/yew/todomvc/static/: index.html
rust/yew/todomvc/todomvc/: Cargo.toml  index.html
rust/yew/todomvc/todomvc/src/: lib.rs
smoke/quasar/compiled-web/: index.html
smoke/todomvc/vanillajs/duolith/: index.html
tauri/: README.md
tauri/communication/: README.md  package.json
tauri/communication/src-tauri/: Cargo.toml  tauri.conf.json
tauri/communication/src-tauri/src/: main.rs
test/: package.json  tauri.conf.js
test/binaries/osx/app-upx.app/Contents/: Info.plist
test/binaries/osx/app-upx.app/Contents/MacOS/: app
test/binaries/osx/app.app/Contents/: Info.plist
test/binaries/osx/app.app/Contents/MacOS/: app
test/src-tauri/: Cargo.toml
todomvc/vanillajs/duolith/: index.js
transpiled/flutter/: .metadata  README.md  pubspec.yaml
transpiled/flutter/lib/: main.dart
transpiled/flutter/lib/models/: boardcell.dart  game.dart  prefs.dart
transpiled/flutter/src-tauri/: Cargo.toml  tauri.conf.json
transpiled/flutter/test/: widget_test.dart
transpiled/flutter/web/: index.html  manifest.json
transpiled/flutter_example/: .gitignore  README.md  package.json  pubspec.yaml
transpiled/flutter_example/lib/: main.dart  utils.dart
transpiled/flutter_example/lib/models/: game.dart
transpiled/flutter_example/src-tauri/: Cargo.toml  tauri.conf.json
transpiled/flutter_example/web/: index.html  manifest.json
transpiled/mint-tauri-starter/: .gitignore  README.md  mint.json  package.json  pnpm-lock.yaml
transpiled/mint-tauri-starter/source/: Main.mint
transpiled/mint-tauri-starter/src-tauri/: Cargo.toml  tauri.conf.json
transpiled/mint-tauri-starter/tests/: Main.mint
transpiled/reason-react/: index.html  package.json
transpiled/reason-react/src-tauri/: Cargo.toml  tauri.conf.json
