[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = [ "you" ]
license = ""
repository = ""
default-run = "app"
edition = "2018"

[dependencies]
serde_json = "1.0.116"
serde = { version = "1.0.200", features = [ "derive" ] }
tauri = { version = "1.6.2", features = [ "all-api" ] }

[build-dependencies]
tauri-build = "1.5.1"

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]

[[bin]]
name = "app"
path = "src/main.rs"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
incremental = false
opt-level = "z"
