[package]
name = "app"
version = "0.1.0"
description = "Mint + Tauri"
authors = [ "you" ]
license = ""
repository = ""
default-run = "app"
edition = "2018"
build = "src/build.rs"

[package.metadata.bundle]
identifier = "com.tauri.dev"
icon = [
  "../dist/icon-120x120.png",
  "../dist/icon-128x128.png",
  "../dist/icon-144x144.png",
  "../dist/icon-152x152.png",
  "../dist/icon-167x167.png",
  "../dist/icon-16x16.png",
  "../dist/icon-180x180.png",
  "../dist/icon-192x192.png",
  "../dist/icon-196x196.png",
  "../dist/icon-256x256.png",
  "../dist/icon-32x32.png",
  "../dist/icon-36x36.png",
  "../dist/icon-48x48.png",
  "../dist/icon-512x512.png",
  "../dist/icon-57x57.png",
  "../dist/icon-72x72.png",
  "../dist/icon-76x76.png",
  "../dist/icon-96x96.png"
]

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = [ "derive" ] }
tauri = { version = "0.4", features = [ "all-api", "edge" ] }

[target."cfg(windows)".build-dependencies]
winres = "0.1"

[features]
dev-server = [ "tauri/dev-server" ]
embedded-server = [ "tauri/embedded-server" ]
no-server = [ "tauri/no-server" ]

[[bin]]
name = "app"
path = "src/main.rs"
