workspace = { }

[package]
name = "gatsby-themed-site-app"
version = "0.1.0"
description = "Gatsby themed site built by Tauri"
author = [ "you" ]
license = ""
repository = ""
default-run = "gatsby-themed-site-app"
edition = "2018"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { path = "../../../../../core/tauri", features =[]}

[build-dependencies]
tauri-build = { path = "../../../../../core/tauri-build" }

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]

[[bin]]
name = "gatsby-themed-site-app"
path = "src/main.rs"
