workspace = { }

[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
author = [ "Daniel Thompson-Yvetot" ]
license = ""
repository = ""
default-run = "app"
edition = "2018"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = [ "derive" ] }
tauri = { path = "../../../../../core/tauri", features = ["api-all"] }

[build-dependencies]
tauri-build = { path = "../../../../../core/tauri-build" }

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]

[[bin]]
name = "app"
path = "src/main.rs"
