[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
author = [ "you" ]
license = ""
repository = ""
default-run = "app"
edition = "2018"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = [ "derive" ] }
tauri = { version = "1.6.0", features = ["api-all"] }

[build-dependencies]
tauri-build = "1.5.1"

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]

[[bin]]
name = "app"
path = "src/main.rs"
